# chicken-invaders

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
Game/: CMakeLists.txt
Game/include/: Asteroid.hpp  Background.hpp  Bonus.hpp  Boss.hpp  BoundaryBouncer.hpp  Bullet.hpp  Chicken.hpp  ChickenLeg.hpp  DelaySprite.hpp  DelayText.hpp  DiscordRichPresence.hpp  Egg.hpp  Enemy.hpp  Explosion.hpp  Feather.hpp  Game.hpp  GameController.hpp  HighScoreEditor.hpp  IntroChicken.hpp  Messenger.hpp  Missile.hpp  Player.hpp  Smoke.hpp  WaveController.hpp  constants.hpp  rng.hpp
Game/src/: Asteroid.cpp  Background.cpp  Boss.cpp  Chicken.cpp  ChickenLeg.cpp  DelaySprite.cpp  DelayText.cpp  DiscordRichPresence.cpp  Egg.cpp  Explosion.cpp  Game.cpp  GameController.cpp  HighScoreEditor.cpp  IntroChicken.cpp  Missile.cpp  Particle.cpp  Planet.cpp  Player.cpp  Smoke.cpp  trigonometry.cpp
UveDX/: CMakeLists.txt
UveDX/include/UveDX/: Animator.hpp  Color.hpp  Font.hpp  LinkedListNode.hpp  Rect.hpp  Sound.hpp  Sprite.hpp  Surface.hpp  SurfaceAnchorType.hpp  SurfaceChain.hpp  TileLayer.hpp  UveBase.hpp  UveDX.hpp  UveFileManager.hpp  UveInput.hpp  UveListOwner.hpp  UveSound.hpp
UveDX/src/: Animator.cpp  Color.cpp  Font.cpp  Rect.cpp  RoundedRectangleShape.cpp  Sound.cpp  Sprite.cpp  Surface.cpp  SurfaceChain.cpp  TileLayer.cpp  UveBase.cpp  UveDX.cpp  UveFileManager.cpp  UveInput.cpp  UveListOwner.cpp  UveSound.cpp  UveTimer.cpp
doc/: BUILD.md  README.md  TODO.md  WHY_THIS_EXISTS.md
doc/reverse_engineering/: ASSETS.md  CLASSES.md  README.md  SCORE.md  diagram.uxf
doc/reverse_engineering/file_formats/: ASSETS.md  HIGHSCORES.md  INTERACTION.md
examples/DVD/: CMakeLists.txt
examples/DVD/src/: main.cpp
include/: Animator.hpp  Asteroid.hpp  Background.hpp  Bonus.hpp  Boss.hpp  BoundaryBouncer.hpp  Bullet.hpp  Chicken.hpp  ChickenLeg.hpp  DelaySprite.hpp  DelayText.hpp  DiscordRichPresence.hpp  Egg.hpp  Enemy.hpp  Explosion.hpp  Feather.hpp  Font.hpp  Game.hpp  GameController.hpp  HighScoreEditor.hpp  IntroChicken.hpp  LinkedListNode.hpp  Messenger.hpp  Missile.hpp  Particle.hpp  Planet.hpp  Player.hpp  RoundedRectangleShape.hpp  Smoke.hpp  Sound.hpp  Sprite.hpp  State.hpp  StateBase.hpp  Surface.hpp  SurfaceAnchorType.hpp  SurfaceChain.hpp  TileLayer.hpp  UveBase.hpp  UveDX.hpp  UveFileManager.hpp  (+9 more)
src/: Animator.cpp  Asteroid.cpp  Background.cpp  Bonus.cpp  Boss.cpp  BoundaryBouncer.cpp  Bullet.cpp  Chicken.cpp  ChickenLeg.cpp  DelaySprite.cpp  DelayText.cpp  DiscordRichPresence.cpp  Egg.cpp  Enemy.cpp  Explosion.cpp  Feather.cpp  Font.cpp  Game.cpp  GameController.cpp  HighScoreEditor.cpp  IntroChicken.cpp  Messenger.cpp  Missile.cpp  Planet.cpp  Player.cpp  RoundedRectangleShape.cpp  Smoke.cpp  Sound.cpp  Sprite.cpp  Surface.cpp  SurfaceChain.cpp  TileLayer.cpp  UveBase.cpp  UveDX.cpp  UveFileManager.cpp  UveInput.cpp  UveListOwner.cpp  UveSound.cpp  UveTimer.cpp  WaveController.cpp  (+5 more)
